--- a/3/3.md
+++ b/3/3.md
@@ -179,8 +179,95 @@ test the package so then you can go to the root directory, run a `nix-build -A t
 try to build the package (.. builds error). Oh yeah we don't have a source, by default make derivation expects 
 a source so let's go back to the test package, let's set, also let's change `stdenv.mkDerivation` to just
 `runCommand`, runCommand is just a very simple builder that just takes a single command to run, in this case
-we really only need this
+we really only need this. Takes three arguments, first is package name, the second is the derivation attributes,
+and here we can set the native build inputs and the third argument, that is down here, this is the script to run,
+the `runCommand` I don't think it cares much about the phases, if it does it should handle this internally
+so we can get rid of this and try it again.
 
-19.18
+```nix
+{ runCommand, jq }:
+runCommand "testPackage" {
 
+  nativeBuildInputs = [
+    jq
+  ];
 
+} ''
+  jq -n '{ someResult: 10 }' > $out
+''
+```
+I'm going to run it in here `:!nix-build -A testPackage`. Ok, that worked. So now let's try the thing I wanted
+to do here, uh, well first let's try the `meta.position`, let's see if its there, so `nix repl .`, let's load
+the current directory into this, `nix-repl> testPackage.meta.position`, that does not work correctly, it points to
+the `runCommand` actually (copies the result output and opens it in vim), if we go here, 81 (line) points to here,
+`runCommandWith`. Oh, ok, so what if we override the meta, because previously it got the position from the meta
+description attribute, so what if we you set this and let's try it again. 
+
+```nix
+meta = {
+  description = "test package";
+};
+```
+```nix
+> nix repl .
+nix-repl> testPackage.meta.position
+"/home/tweagysil/.../default.nix:9"
+
+nix-repl> 
+```
+That worked! Awesome. So apparently fallback to underlying builder perhaps but yeah, let's see, we can nix edit this,
+```nix
+> nix edit .#testPackage`
+warning: Git tree ... is dirty
+```
+
+So this is currently a problem, it's going to import the entirey of nixpkgs to the store, it will be fixed in future nix update.
+And we get the, this also will be fixed, this error is really bad right now with flakes if you get no such file or directory,
+generally you need to add this directory to git (`git add pkgs/misc/testPackage/`) because nix only contains things tracked 
+by git in nix flakes rather. So edit this and let's try it again. Ok that works. Now let's try what happens if we mess with the
+file name. Let's move `mv testPackage test:Package`, all right, and let's update `vim top-level/all-packages.nix`, `testPackage`
+to `test:Package`, now as you can see the syntax highlighting breaks here, I don't think this is a valid path, we can 
+however do say: `testPackage = callPackage (../. + "/misc/test:Package") {};`, that should work. So path appending is 
+interesting in nix and a bit weird. Well, let's try it out first, let's go `nix edit .#testPackage` yeah now.. ah, oh we
+haven't commited it yet, `git add pkgs/misc/testPackage/`, `nix edit .#testPackage`, let's edit, ooh, that still works,
+so the parsing code is apparently resilient to that, `nix repl .`, that's nice, `nix-repl> testPackage.meta.position`, but yeah
+it would contain a colon here. Oh yeah I wanted to show the `vim top-level/all-packages.nix`, so paths in nix are something, 
+are interesting in many ways. We .. quick demo here:
+
+So some paths, `./.` so paths always need a slash in them, and they always expand to absolute paths relative to the current
+directory you are in or with the current file that you are in right now. You can also make absolute paths, howerev they aren't 
+super common because you generally don't want things to be specific on where you currently are. So by default they are always,
+they expand to absolute paths. You can append things here, `./. + "/` using just string concatenation, so we can say let's go to
+the lib directory here and that does work, `./. + "/lib"`, however not that if you just, nix does path normalization every time
+you append strings so if you just add slash the slash isnt' actually there because it takes this and normalizes it again which does
+remove the slash so if you do this this wouldn't work `./. + "/" + "lib"`, this gives an invalid result, this also hints
+at the operator precedence here because nix underneath does this, `(./. + "/") + "lib"`, first appends the absolute path to the,
+it's in this order, if it was the other way around like this, `./. + ("/" + "lib")` that does work but at that point we might as 
+well do this, `./. + "/lib"`. Alternatively you might try to do this, `"${./.}/lib"` but this is as you'll notice something 
+different because it imports the entire dot slash directory into the nix store and returns a store path. You can avoid store imports
+in strings by adding, by using the `toString` builtin, `"${toString ./.}/lib"`, this just turns it into the literal string where
+it points to, so in general, absolute path and this is a path datatype, if you want a string from that use this `toString ./.`.
+
+So paths, let me show you something else about paths that's a bit weird and might surprise you. Let's say we take some path,
+`./.`, we go into the directory, `./lib/..`, we go out of that directory, it removes this part so nix removes these `..` if it can,
+it removes them always, it turns them into absolute path and this is not entirely correct behaviour if `lib` is a symlink. In..
+typically `realpath` is a utility on linux that you can use to resolve path so if you do this here: `realpath ./lib/..` it gets
+the same result but that's because it checks what lib is. Let's say we had a symlink here, let's say we had lib-symlink here
+pointing to `pkgs/applications`, `ln -s pkgs/applications lib-symlink`, and now if we do `realpath ./lib-symlink/..` it's going 
+to return this (`/home/tweagysil/src/nixpkgs/pkgs`), it's not the current directory anymore because it goes into that symlink, and 
+then does the `..`, so it does the expansion here, goes into `pkgs/applications/..`, then it becomes this (`/home/tweagysil/src/nixpkgs/pkgs`), and then it removes this component. 
+
+Nix however doesn't do this, so if we do `nix-repl> ./lib-symlink/..` that (`/home/tweagysil/src/nixpkgs`) is just the current
+directory, nix doesn't read this file at all. And there is some builtin support to read files and directories in nix, this is
+`builtins.readDir ./.`, this allows you to get a listing of all the the entries in the current directory along with what their
+type is, if it's directory, or a symlink or a regular file. We can also read individual files `builtins.readFile ./default.nix`,
+all right, it returns a string, in nixpkgs library, let's load this `nix-repl> :l <nixpkgs/lib>` there is also, yes there is
+readFile which is just an alias to the builtin but there is also `importJSON` which both reads the file and does a
+`builtins.fromJSON` on it which is sometimes a bit convenient
+
+```nix
+nix-repl> lib.importJSON
+%
+> fd -t f | rg json
+```
+30.29
