4.md standard nix examples simulating flake like behaviour

--- a/4/4.md
+++ b/4/4.md
@@ -129,4 +129,156 @@ right here and do it like this, so this is not the best practice in flakes but, 
   
 }
 ```
-So you can also use flake utils for this,
+So you can also use flake-utils for this, that is a third party community project that does this for all the systems,
+so simplifies the setup for that, typically recommended yeah, but let's now do the same with standard nix, `vim default.nix`,
+traditional nix, so first of all we might do, so we can do it very easily like this, `(import <nixpkgs>{}).hello` and let's also 
+do `myHello`, this is an attribute set:
+
+```nix
+{
+  myHello = (import <nixpkgs> {}).hello;
+}
+```
+
+OK, this does work, now let me evaluate that, `:!nix-build -A myHello` and that works. And so this, but this is impure,
+we also want the same purity of standard flakes, here we have a couple impurities, we have the nix packages from this,
+`<nixpkgs>`, if we evaluate this in a nix repl:
+
+```nix
+> nix repl
+nix-repl> <nixpkgs>
+/nix/var/nix/profiles/per-user/root/channels/nixos
+```
+
+We can see this points to some channel, and this is different then this path for every user and this path changes when I
+update the channels and stuff, and so this is an impurity, we want to get rid of this. The way we can do this is by
+simply saying, let's add a `let in`, let's say nixpkgs is equal to, now we can say `fetchTarball {};`, so `fetchTarball`
+is a builtin function that can fetch a tarball, in this case we can say we fetch from github.com, NixOS, nixpkgs,
+then github provides archives, archives of the repositories at specific commits, we just need the revision here,
+and the revision let's get it from the lock file, let's go into `flake.lock`, let's copy the same one it uses here,
+`d01cb...tar.gz";`, then we provide the hash, as you can already see this is already a bit annoying to do here, in 
+flakes we don't have to do any of that but we can get rid of this (`<nixpkgs>`) impurity now, so now let's evaluate this again:
+
+```nix
+let
+  nixpkgs = fetchTarball {
+    url = "https://github.com/NixOS/nixpkgs/archive/d01cb...tar.gz";
+    sha256 = "000...0";
+  };
+in {
+  myHello = (import nixpkgs {}).hello;
+}
+```
+
+Let's do a `nix-build -A myHello` again, and it's gonna take a bit longer, it's going to fetch this tarball, it's gonna
+try to verify that the hash is correct, and I'm kind of surprised that it doesn't reuse the result from flakes but I,
+maybe that's a different cache, ah so we get the hash back (`error mismatch in file..`), let's insert this here and now 
+we can build it again, and this should be the exact same result as flakes, let's try this, this now points to, (compares 
+both `result -> nix/store/jidy..hello-2.12.1`.
+
+All right, we also have another impurity, the same we had in flakes earlier, that's the system and there is actually some
+more. So nix packages has kind of three main arguments that most people care about, that's `overlays`, `config`, and `system`,
+the one we saw earlier, and all of these have defaults that are impure, `overlays` by default reads from `~/.config/nixpkgs/overlays`
+I believe, `config` by default reads from `~/.config/nixpkgs/config.nix` and `system` by default is `builtins.currentSystem`,
+so these are pretty bad here, these are like, like I've seen users have problems because they didn't realize the defaults were
+pulled in, and they had some `overlays` in `config.nix` that was custom to their setup, and therefore breaking some 
+development workflow for a project. Same in flakes can't happen because it enforces this.
+
+```nix
+myHello = (import nixpkgs {
+  # overlays, by default ~/.config/nixpkgs/overlays
+  # config, by default ~/.config/nixpkgs/config.nix
+  # system, by default builtins.currentSystem
+```
+
+In non-flakes we can also do this just by overriding these with empty values, you can say overlays is empty, config is empty,
+overlays is a list, so we can pass an empty list, `overlays = [];`, config is I guess attribute sets so we pass an empty attribute
+set, `config = {};`, and system, now we don't want to do this here, `"x86_64-linux"`, because, well the `builtins.currentSystem`
+impurity is OK, it's typically what users expect and so we don't really want to make that more annoying to do, so we want to
+leave this here, but we also want this expression to be, like we want to be able to change the system even if we are on a 
+different one, so what typically is done is that we have a system argument to the top level function which defaults to 
+`builtins.currentSystem and then in the result here or in the nix packages import we just use inherit system or system equals 
+system and so this expression is a pure one but it has this impure default up here:
+
+```nix
+{ system ? builtins.currentSystem }:
+let
+  nixpkgs = fetchTarball {
+    url = "https://github.com/NixOS/nixpkgs/archive/d01cb...tar.gz";
+    sha256 = "000...0";
+  };
+in {
+  myHello = (import nixpkgs
+    # overlays, by default ~/.config/nixpkgs/overlays
+    # config, by default ~/.config/nixpkgs/config.nix
+    # system, by default builtins.currentSystem
+    overlays = [];
+    config = {};
+    inherit system;
+  }).hello;
+}
+```
+
+But we can override this one, and the way we can override it is, well if we import this file from somewhere else,
+say `import ./default.nix { system = "x86_64-darwin"; }`, or the CLI we can do let's try this `nix-build -A myHello`
+so this still works and we can pass our string here as even with autocompletion, will pass another system,
+`nix-build -A myHello --argstr system x86_64-darwin`, now this actually might, yeah this works because I have a,
+cache.nixos.org has it cached, we can also try to build it by adding a check, `nix-build -A myHello --argstr system x86_64-darwin --check`
+this only works if you already have the path in your store and why it's called check, so it builds it again and then
+checks whether it results in the same path, the same binary. This will fail because I'm not on a darwin system, (building),
+any second.. yep (fails), but yeah if you had remote builders this could also work.
+
+Yeah, so this, as far as I know, does not have any impurities, and so this doesn't work super well at the moment,
+I hope it improves a bit. You can also use pure evaluation mode in the old nix commands. So there is two flags,
+one of them is `--pure` and one of them is `--pure-eval`, the `--pure-eval` one is for pure evaluation mode, the 
+`--pure` is for nix shell, and this is, it is a bit misleading, `> nix-shell --pure`, it just doesn't propagate
+your environment into the nix shell from outside but yeah in this case we want to use `--pure-eval`, 
+`nix-build -A myHello --pure-eval`, and we get the problem here:
+
+```nix
+> nix-build -A myHello --pure-eval
+error: access to absolute path '/home/tweagsy..default.nix' is forbidden in pure eval mode (use '--impure' to override)
+```
+Pure evaluation is so strict that you cannot even access the `default.nix` file which is evaluated by default so what
+can we do? Can we pass the `default.nix` here, `nix-build -A myHello --pure-eval default.nix`, no, that also doesn't
+work, the only way to make pure eval work is by giving an expression, so `--expr` short for expression and then here
+now we can evaluate things in pure evaluation mode `'1 + 1'`, let's also remove the `-A` here, let's just do
+`nix-instantiate --eval --pure-eval --expr '1 + 1'` (outputs 2). So this works, this in here is now pure evaluation,
+so we can try to access `builtins.currentSystems` and it doesn't work, `nix-instantiate --eval --pure-eval --expr 'builtins.currentSystem'`,
+the attribute doesn't exist, that's the same behaviour as in flakes, so here the only way to actually get access to 
+any code and to import nix is by using builtin fetchers, and so what we can do here is we can use `builtins.fetchGit`, or
+doesn't need the prefix, we can say `url` equals now dot slash dot I believe that should work, if we just try this:
+
+```nix
+nix-instantiate --eval --pure-eval --expr 'fetchGit { url = ./.; }'
+error: in pure evaluation mode, 'fetchTree' requires locked input, at (string):1:1
+```
+
+It says, requires a locked input, so we need to provide a revision so now, the problem, we haven't commited our code yet, so
+let's try this:
+
+```bash
+gst
+gaa
+rm result
+git reset
+gaa
+gst
+```
+
+Let's commit these files and let's try this again:
+
+```bash
+nix-instantiate --eval --pure-eval --expr 'fetchGit { url = ./.; }'
+git log
+commit 6bb6.. (HEAD -> main) 
+```
+
+(Copies the commit hash) Now let's try this again:
+
+```nix
+nix-instantiate --eval --pure-eval --expr 'fetchGit { url = ./.; rev = "6bb6.."; }'
+
+```
+
+And so yeah, this works now, we have a something representing our source, we have an outpath which is where source 
