standard nix pure evaluation examples

--- a/4/4.md
+++ b/4/4.md
@@ -281,4 +281,67 @@ nix-instantiate --eval --pure-eval --expr 'fetchGit { url = ./.; rev = "6bb6..";
 
 ```
 
-And so yeah, this works now, we have a something representing our source, we have an outpath which is where source 
+And so yeah, this works now, we have a something representing our source, we have an outpath which is where source
+actually lives, and by the way outpath is, that's really how you can evaluate derivations to the path, to path, like
+we can say import, `nix-repl> :l <nixpkgs>` `hello.outPath`, hello has an outpath but if you just interpolate using
+antiquotation, `nix-repl> "${hello}"`, that's what gets returned, similarly we can also say `attrs = { outPath = "foo"; }`,
+and now we can do `"${attrs}"` and it results in `foo`.
+
+```nix
+nix-repl> :l <nixpkgs>
+Added 16766 variables.
+
+nix-repl> hello.outPath
+"/nix/store/i9p5..-hello-2.12"
+
+nix-repl> "${hello}"
+"/nix/store/i9p5..-hello-2.12"
+
+nix-repl> attrs = { outPath = "foo"; }
+
+nix-repl> "${attrs}"
+"foo"
+```
+
+Kind of an internal implementation detail for how derivations get their, get interpolated to strings. Anyways that aside, we
+now have a source here, we can now import this, import this path:
+
+```nix
+> nix-instantiate --eval --pure-eval --expr 'import (fetchGit { url = ./.; rev = "6bb.."; })'
+<LAMBDA>
+```
+It get's converted to the outpath for the import expression, so that works with the import. Now we get the lambda.
+And that's the `default.nix` file here, `cat default.nix`, that's a lambda at the top, (`{ system ? builtins.currentSystem }:`).
+Let's call it with an empty set but that then shouldn't work:
+
+```nix
+> nix-instantiate --eval --pure-eval --expr 'import (fetchGit { url = ./.; rev = "6bb.."; }) {}'
+{ myHello = <CODE>; }
+```
+Because `currentSystem` isn't available, let's try `myHello`:
+
+```nix
+> nix-instantiate --eval --pure-eval --expr '(import (fetchGit { url = ./.; rev = "6bb.."; }) {}).myHello'
+error: attribute 'currentSystem' missing..
+```
+Yeah, that works, so we have this here:
+
+```nix
+> nix-instantiate --eval --pure-eval --expr '(import (fetchGit { url = ./.; rev = "6bb.."; }) { system = "x86_64-linux"; }).myHello'
+```
+
+All right, and that works, let me change this to a nix build, ok it works:
+
+```nix
+> nix-build --pure-eval --expr '(import (fetchGit { url = ./.; rev = "6bb.."; }) { system = "x86_64-linux"; }).myHello'
+/nix/store/jiddy..-hello-2.12.1
+```
+
+But as you can see, this is quite annoying to do, and now also every time I make a change I have to comit it again so we get a new 
+revision, I need to interpolate the string here somehow to get the revision into the string, we can use something like
+`--argstr`, that just doesn't work. You can, the thing nix should do that I'm going to provide a simple wrapper around something
+like this, a pattern where you commited, provide the hash here just to make pure evaluation work mode work nicely, but this is how
+it works right now, and in flakes it's obviously much easier and it just does by default. Are there any questions about this?
+
+No? All right, I'll continue on then. Something else here, so in this case, well I guess in flakes, let's say we want to
+build this flake with a different nix packages
