4.md standard nix examples simulating flake like behaviour

--- a/4/4.md
+++ b/4/4.md
@@ -344,4 +344,45 @@ like this, a pattern where you commited, provide the hash here just to make pure
 it works right now, and in flakes it's obviously much easier and it just does by default. Are there any questions about this?
 
 No? All right, I'll continue on then. Something else here, so in this case, well I guess in flakes, let's say we want to
-build this flake with a different nix packages
+build this flake with a different nix packages, what we can do here is, we can say `--overide-input` and currently nix packages
+is locked to some, to this revision that we can also change this, let's say we wanna build so `github:NixOS/nixpkgs`and then I think
+let's build `nixos-21.05`, sure.
+
+```nix
+> nix build .#myHello --override-input nixpkgs github:NixOS/nixpkgs/nixos-21.05
+[0.0 MiB DL] downloading ...
+```
+
+So it fetches it, kind of weird that there is zero megabytes here, all right, fetches it, updates it, and builds hello, and yeah,
+changed her and now this would be another hello version. You can check this,
+
+```bash
+> result/bin/hello
+Hello, world!
+
+> result/bin/hello --version
+hello (GNU Hello) 2.10
+```
+
+This is fairly easy, but in our `default.nix`we can't currently do that, we have the nix packages hardcoded here in a 
+`let in` statement, so a common way to get this to work is to provide an additional argument here which is `pkgs`, mhm, 
+`nixpkgs ?`, we can also do both so we can say nixpkgs which defaults to this tarball, we can also use another one,
+and then we can also say `pkgs`, sometimes people might have packages, like imported packages already and they might
+want to provide this so we can put this into here so let's move this entire right into this argument, interleave this bit
+here, `myHello` is now `myHello = pkgs.hello;`:
+
+```nix
+{ system ? builtins.currentSystem,
+  nixpkgs ? fetchTarball {
+    url = "https://github.com/NixOS/nixpkgs/archive/d01cb..tar.gz";
+    sha256 = "0gff..";
+  },
+  pkgs ? import nixpkgs {
+    overlays = [];
+    config = [];
+    inherit system;
+  },
+}: {
+  myHello = pkgs.hello;
+}
+```
