4.md Overriding nixpkgs in stable nix

--- a/4/4.md
+++ b/4/4.md
@@ -386,3 +386,31 @@ here, `myHello` is now `myHello = pkgs.hello;`:
   myHello = pkgs.hello;
 }
 ```
+
+Alexander Sosedkin: ..refer to attributes like that?
+
+Silvan: How do you mean? The hello or?
+
+Alexander Sosedkin: I mean that refering to nix packages from the, yeah, from here
+
+Silvan: I'm not sure, oh, you mean how this expression here (`pkgs ? import nixpkgs..`) refers to, like uses this
+`nixpkgs ? fetch..` as dependency really. Yeah, that's possible, the function arguments here are just like a recursive,
+just like a let in statement or like a recursive attribute set definition. So all of the definitions here are available
+in the others and themselves, you could even do like `pkgs = pkgs;` here. Doesn't make a lot of sense there.
+
+Alexander Sosedkin: Interesting
+
+Silvan: Yeah
+
+Ok now with this we can do the same thing as with flakes, we can do nix build, let's not do pure evaluation mode now,
+so `nix-build -A myHello` works but we can also say `nix-build -A myHello --arg` so arg provides a nix value as an
+argument, `--argstr` turns a given string into a nix string directly, and in this case we want to use `--arg` so let's
+se if we want to override nixpkgs so in here we could say `--arg nixpkgs 'fetchTarball`, let's see what did we use earlier,
+`nix-build -A myHello --arg nixpkgs 'fetchTarball { url = "https://github.com/NixOS/nixpkgs/archive/nixos-21.05.tar.gz"; }' `
+And so in this case we can leave out the sha and also this url reference can change over time, just because I'm not gonna
+bother making this pure because it's only temporary override. So this works. You could also add some additional convenience 
+things where you can say like `--arg channel nixos-21.05`, this would then be impure but you can also integrate it with
+some other purity aspects.
+
+So nix, the traditional nix here is impure by default, well, a lot of things are impure by default and you need to fix those,
+but you can make them pure in like all cases. So let's take another look at the flake again.
