4th, using niv to manage sources

--- a/4/4.md
+++ b/4/4.md
@@ -413,4 +413,55 @@ things where you can say like `--arg channel nixos-21.05`, this would then be im
 some other purity aspects.
 
 So nix, the traditional nix here is impure by default, well, a lot of things are impure by default and you need to fix those,
-but you can make them pure in like all cases. So let's take another look at the flake again.
+but you can make them pure in like all cases. So let's take another look at the flake again. So let's say we want to update the 
+pinned nix packages version in flakes. The way we can do this is `nix flake update`, all right, so I guess nothing changed.
+So let's say, we're going to `vim flake.nix`, all right, we haven't declared the nix packages in here, it defaults to the
+master version of NixOS nix packages:
+
+```nix
+{
+
+  outputs = { self, nixpkgs }: {
+    packages.x86_64-linux.myHello = (import nixpkgs {system = "x86_64-linux"; }).hello;
+    packages.x86_64-darwin.myHello = (import nixpkgs {system = "x86_64-darwin"; }).hello;
+  };
+  
+}
+```
+
+But let's say we define it explicitly here with `inputs.nixpkgs.url = "github:NixOS/nixpkgs/nixos-21.05";` let's say 
+we pin it to 21.05 again, so `nix flake update`. All right that worked. And so yeah that's good, this works without filaments.
+So we can build our hello again, we get the old hello version here. If we want to do the same in our `default.nix` we would
+have to go in here or go on GitHub, find out this revision, and in this case I'm gonna cheat because I'm going to use the 
+`flake.lock` here, so let me just pick the revision from here, turn here, change this (in `default.nix` Silvan changes
+the revision number in the `url = "https..` line at the top), now we have to update this hash (the `sha256`) to be, change `0` to `1`
+in the beginning, now we have to try building it again or you can also use a prefetcher to determine the hash beforehand,
+that would be useful in CI, so it's gonna fetch it again (`nix-build -A myHello`), we get the new hash back and we can insert
+(in `sha256`) again, all right and now it works again (`nix-build -A myHello`), but yeah, this is obviously quite painful.
+There is a kind of established way to do this more streamlined, that is using `niv`, `niv` is a third party community
+project to essentially do this source updating for you and so install it, I'm just gonna use nix shell here, 
+`nix-shell -p niv`, then we can run `niv init`, this creates a bunch of files, and so let's look at these files, 
+we have a nix directory, `cd nix`, which it creates for us, all the files are in there, has a `vim sources.json`, that's
+the file, essentially the lock file it uses to track services, and so here we can see, oh it also detected the, this
+locks in the same way as flake lock does and we have the `sources.nix`, this is just a big file managed by niv to do the
+import correctly, so it has the builtin fetchers, packages fetchers, a whole bunch of things. So the way to use it is we 
+can go into our `vim default.nix` here and instead of using this here:
+
+```nix
+nixpkgs ? fetchTarball {
+  url = "https://github.com/NixOS/nixpkgs/archive/022..tar.gz";
+  sha256 = "12q..4n";
+},
+```
+
+We can do, let's say, add another argument here, `sources ?`, so niv, this is the way it is used:
+
+```nix
+{ system ? builtins.currentSystem,
+  sources ? import nix/sources.nix,
+  nixpkgs ?
+  pkgs ? ..
+```
+
+So this imports the `sources.nix` file which also then imports all the pinned sources from the `sources.json` file so 
+in here we can use `nixpkgs ? sources.nixpkgs,` instead, yeah let's try out 32.51
